* Drag and drop seems to work fine in Firefox and IE * Debugging on IE (paste depends on security settings) * Corrected small bugs
TODO: Debugging on Safari and Opera. Write some doc, comments.

--- a/axel/bundles/richcontent/richcontent.css
+++ b/axel/bundles/richcontent/richcontent.css
@@ -44,6 +44,7 @@
 	    height: 10pt; 
 		font-size: 9pt;
 		margin: 8pt 3px 0px 3px; 
+		overflow: auto;
 	}
 	
 	.edit-button {
@@ -79,9 +80,10 @@
 	
 	.buttons-container {
 		padding:20px; 
+		float:left;
 		position: fixed; 
 		top: 30px; 
-		right: 20px;
+		left: 30px;
 	    background-color: #F0F0F0;
 	    border: 1px solid black;
         -moz-border-radius: 5px;
